--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Build / deps
 node_modules
 dist
 dist-ssr
+.next
 *.local
 
 # Editor directories and files
