--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-    "routes": [
-        { "src": "/(.*)", "dest": "/"}
+    "rewrites": [
+        { "source": "/(.*)",
+         "destination": "/index.html"
+        }
     ]
 }
